Changelog for pdoTools.

2.2.4 pl
==============
- [pdoUsers] Fixed overwrite modUser.id by modUserProfile.id.

2.2.3 pl
==============
- [pdoPage] Fixed processing of uncached conditions in chunks when ajax mode is enabled.

2.2.2 pl
==============
- [pdoPage] Added new parameter &pageLinkScheme.

2.2.1 pl
==============
- [#155] [pdoPage] Added new parameter &ajaxHistory.
- [pdoPage] Added connector for requests in ajax mode.

2.2.0 pl
==============
- [#175] [pdoFetch] Ability to specify sequence of table joins.
- [#174] [Fenom] Ability to add Fenom modifiers into pdoParser.

2.1.21 pl
==============
- [#175] [pdoFetch] Ability to specify sequence of table joins.
- [#176] [pdoUsers] Fixed &toPlaceholders with &returnIds.

2.1.20 pl
==============
- [pdoSitemap] Fixed default &cacheKey.

2.1.19 pl
==============
- [Fenom] Disabled $options in cacheManager::set() due to security reasons.

2.1.18 pl
==============
- [Fenom] Fixed ability to access to the modX object from {$_modx} variable.
- [Fenom] Improved method {$_modx->runProcessor()}.

2.1.17 pl
==============
- [Fenom] Added {$_modx->getResource($id, $options)}.
- [Fenom] Added {$_modx->getResources($where, $options)}.
- [Fenom] Improved support of debugParser.

2.1.16 pl
==============
- [Fenom] Added {$_modx->isMember($groups, $matchAll)}.
- [Fenom] Added {$_modx->getPlaceholders()}.

2.1.15 pl
==============
- [pdoPage] Added parameter &strictMode.

2.1.14 pl
==============
- [pdoSitemap] Added options for cache snippets results.
- [pdoSitemap] Cache enabled by default.

2.1.13 pl
==============
- [#163] Fixed ignoring of &idx in pdoResources and pdoUsers.

2.1.12 pl
==============
- [pdoPage] [#161] Fixed support of arrays in hash when &ajaxMode is enabled.

2.1.11 pl
==============
- [#150] [Fenom] Fixed processing of TVs values in a {$_modx->resource}.
- [#147] [pdoSitemap] Fixed possible duplicates in sitemap.
- [pdoPage] Support of arrays in hash when &ajaxMode is enabled.

2.1.10 pl
==============